--- a/css/style.css
+++ b/css/style.css
@@ -7,22 +7,19 @@ h1, .footer {
     text-align: center;
 }
 
-.picholder {
-    height: 500px;
+.catholder {
+    height: 300px;
     width: 700px;
     margin-left: auto;
     margin-right: auto;
 }
-.picholder h2 {
-    width: 300px;
-    text-align: center;
-}
-.catpicture {
+
+#cat1, .catpicture img{
     width: 300px;
     float: left;
 }
 
-.catpictureDual {
+#cat2, .catpictureDual img{
     width: 300px;
     float: right;
 }
@@ -44,3 +41,47 @@ h1, .footer {
 .clickcount {
     color: #FF0040;
 }
+
+
+.content {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.item {
+    border: solid 1px #fff;
+    width: 100px;
+    font-size: 20px;
+    padding: 10px;
+    text-align: center;
+    display: inline-block;
+}
+
+.catlistholder .catimage {
+    display: none;
+}
+.catimage {
+    height: 100px;
+    width: 100px;
+}
+
+.count {
+    vertical-align: top;
+    height: 128px;
+    line-height: 2;
+}
+
+.inputarea{
+    display: none;
+}
+
+input {
+    margin-top: 10px;
+}
+
+.inputarea button {
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
